<resources>
    <string name="app_name">GroceryApp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="all_categories">All Categories</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="x">x</string>
    <string name="sub_total">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="_0">0</string>
    <string name="checkout">Checkout</string>
    <string name="add_new_address">Add new address</string>
    <string name="number">Number</string>
    <string name="type">Type</string>
    <string name="pin_code">Zipcode</string>
    <string name="city">City</string>
    <string name="street_name">Street name</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log out</string>
    <string name="view_cart">View Cart</string>
    <string name="billing">Billing</string>
    <string name="delivery">Delivery</string>
    <string name="apply_coupon_and_offers">Apply Coupon and Offers</string>
    <string name="pay_online">Pay online</string>
    <string name="pay_by_cash_on_delivery">Pay by Cash on Delivery</string>
    <string name="_dollar0">$0</string>
    <string name="you_will_save_0_on_this_order">You will save $0 on this order</string>
    <string name="hello">Hello</string>
    <string name="my_account">My Account</string>
    <string name="my_orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="user">User</string>
    <string name="grocery">Grocery App</string>
    <string name="order_submitted">Order submitted</string>
    <string name="home">Home</string>
</resources>