<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="12">

    <include layout="@layout/action_bar"/>

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_address_billing_text"
            android:text="@string/billing"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/add_address_name"
            android:background="@drawable/edit_text_main"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/add_address_mobile"
            android:background="@drawable/edit_text_main"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_address_delivery_text"
            android:text="@string/delivery"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/add_address_number"
            android:background="@drawable/edit_text_main"
            android:hint="@string/number"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/add_address_street"
            android:background="@drawable/edit_text_main"
            android:hint="@string/street_name"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/add_address_city"
            android:background="@drawable/edit_text_main"
            android:hint="@string/city"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/add_address_pincode"
            android:background="@drawable/edit_text_main"
            android:hint="@string/pin_code"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/add_address_type"
            android:background="@drawable/edit_text_main"
            android:hint="@string/type"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_address_submit_button"
        android:background="@drawable/button_main"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>

</LinearLayout>