<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:weightSum="12">

    <include layout="@layout/action_bar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/layout_cart_total"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/edit_text_main"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/cart_sub_total_text"
            android:text="@string/sub_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/cart_discount_text"
            android:layout_below="@id/cart_sub_total_text"
            android:text="@string/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/cart_total_text"
            android:layout_below="@id/cart_discount_text"
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/cart_sub_total"
            android:text="@string/_0"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/cart_discount"
            android:layout_below="@+id/cart_sub_total"
            android:text="@string/_0"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/cart_total"
            android:layout_below="@+id/cart_discount"
            android:text="@string/_0"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/cart_checkout_button"
        android:background="@drawable/button_main"
        android:text="@string/checkout"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>

</LinearLayout>