<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="4dp"
    android:layout_margin="4dp"
    android:background="@drawable/edit_text_main"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/cart_product_adapter_image"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/cart_product_adapter_name"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/cart_product_adapter_image"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/cart_product_adapter_price"
        android:layout_toEndOf="@+id/cart_product_adapter_image"
        android:layout_below="@id/cart_product_adapter_name"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/cart_product_adapter_quantity"
        android:layout_toEndOf="@+id/cart_product_adapter_image"
        android:layout_below="@id/cart_product_adapter_price"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:background="@drawable/button_main"
        android:id="@+id/cart_product_adapter_increase"
        android:layout_alignParentEnd="true"
        android:text="@string/increase"
        android:layout_height="36dp"
        android:layout_width="36dp"
        android:layout_margin="4dp"
        />
    <Button
        android:background="@drawable/button_main"
        android:id="@+id/cart_product_adapter_decrease"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/cart_product_adapter_increase"
        android:text="@string/decrease"
        android:layout_height="36dp"
        android:layout_width="36dp"
        android:layout_margin="4dp"
        />
    <Button
        android:background="@drawable/button_main"
        android:id="@+id/cart_product_adapter_remove"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/cart_product_adapter_decrease"
        android:text="@string/x"
        android:layout_height="36dp"
        android:layout_width="36dp"
        android:layout_margin="4dp"/>
</RelativeLayout>